--- a/src/App.module.css
+++ b/src/App.module.css
@@ -12,13 +12,26 @@
   font-weight: 600;
   cursor: pointer;
   background: transparent;
-  color: lime;
+  color: limegreen;
   border-radius: 10px;
-  border: 3px solid var(--textClr);
+  border: 2px solid var(--textClr);
   transition: all .3s ease;
 }
 
 .nav button:hover {
   background: white;
   color: var(--bgClr);
+}
+
+.collapsible {
+  background: #333;
+  border-radius: 10px;
+  padding: 1rem;
+  margin: 1rem 0;
+
+  word-wrap: break-word;
+}
+
+.collapsible > summary {
+  margin-bottom: .7rem;
 }
