--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,37 +1,17 @@
-.nav {
+h1 {
+  font-size: 1.8rem;
+}
+
+.filesList {
+  display: flex;
+  flex-direction: column;
+  gap: .4rem;
+  padding: 0 1rem;
+}
+
+.nav, .filesHeader {
   display: flex;
   width: 100%;
   justify-content: space-between;
   align-items: center;
-}
-
-.nav button {
-  height: fit-content;
-  padding: .5rem 1.5rem;
-  font-size: 1.2rem;
-  font-weight: 600;
-  cursor: pointer;
-  background: transparent;
-  color: limegreen;
-  border-radius: 10px;
-  border: 2px solid var(--textClr);
-  transition: all .3s ease;
-}
-
-.nav button:hover {
-  background: white;
-  color: var(--bgClr);
-}
-
-.collapsible {
-  background: #333;
-  border-radius: 10px;
-  padding: 1rem;
-  margin: 1rem 0;
-
-  word-wrap: break-word;
-}
-
-.collapsible > summary {
-  margin-bottom: .7rem;
 }
