--- a/src/components/Collapsible.module.css
+++ b/src/components/Collapsible.module.css
@@ -2,14 +2,19 @@
 
   --collBgClr: #333;
 
-  background: var(--collBgClr);
+  /* background: var(--collBgClr); */
   border-radius: 10px;
-  padding: 1rem;
-  margin: 1rem 0;
+  padding: .7rem 1rem;
+  margin: .8rem 0 0;
+  box-sizing: border-box;
 
   word-wrap: break-word;
 }
 
 .collapsible > summary {
   margin-bottom: .7rem;
+}
+
+.collapsible > summary > .summary {
+  font-weight: bolder;
 }
