--- a/src/index.css
+++ b/src/index.css
@@ -55,3 +55,8 @@ input[type=file]::file-selector-button {
   border-radius: 6px;
   transition: all .3s ease;
 }
+
+/* input[type=file]::file-selector-button:hover {
+  translate: -.15rem -.15rem;
+  box-shadow: .15rem .15rem royalblue;
+} */
